fix bug creating spacing as create new list on nav bar

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -112,7 +112,7 @@ body {
 
   /* --------- Main Section ----------*/
   .container>.sec-elements-list{
-    margin-top: -200px;
+    margin-top: -130px;
   }
 
   /* --------- Sec. create and Download list ----------*/
